courses details, listing, register - first step

--- a/courses_listing.html
+++ b/courses_listing.html
@@ -1,10 +1,217 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" name="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
+    <meta name="keywords" name="" />
+    <meta name="description" name="" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/icheck/skins/square/red.css" />
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="vendor/popper/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/modernizr-custom.js"></script>
 </head>
+
 <body>
-	
+
+<header class="headersite">
+    <section class="headersite-top">
+        <div class="container">
+            <div class="row">
+                <ul class="nav-help">
+                    <li class="nav-help-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
+                    <li class="nav-help-item"><i class="icon icon--phone"></i>tel. (61) 85 50 112</li>
+                    <li class="nav-help-item"><i class="icon icon--help"></i><a href="#">Pomoc</a></li>
+                    <li class="nav-help-item"><i class="icon icon--cart"></i><a href="#">Koszyk (0)</a></li>
+                    <li class="nav-help-item"><i class="icon icon--search"></i><a href="#">Szukaj</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="headersite-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col logo">
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt=""></a>
+                </div>
+                <menu class="col-lg-auto navbar">
+                    <ul class="navbar-inner">
+                        <li class="navbar-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
+                        <li class="navbar-item"><a href="#">Szkolenia zamknięte</a></li>
+                        <li class="navbar-item"><a href="#">Publikacje</a></li>
+                        <li class="navbar-item"><a href="about_us.html">O nas</a></li>
+                        <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
+                    </ul>
+                </menu>
+            </div>
+        </div>
+    </section>
+</header>
+
+<main>
+    <div class="container">
+        <div class="header center">
+            <h3 class="header-title header-title--name"><span>Polecane szkolenia</span></h3>
+        </div>
+    </div>
+
+	<section class="insetbox insetbox--admission">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col">
+	                <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
+	                <a href="contact.html" class="btn btn-primary btn-primary pull-right">Pobierz katalog</a>
+	            </div>
+	        </div>
+	    </div>
+	</section>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">forum</span>
+                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h3>
+                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                            </p>
+                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">e-kurs mailowy</span>
+                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h3>
+                        <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
+                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
+                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
+                            </p>
+                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 listing-action">
+				<ul class="pagination">
+					<li class="prev"><a href="#"><i class="icon icon--arrow-left"></i> poprzednia strona</a></li>
+					<li class="active"><a href="#">1<span class="sr-only">(aktualna)</span></a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+					<li class="blank"><span>...</span></li>
+					<li class="next"><a href="#">następna strona</a></li>
+				</ul>
+				<div class="btn-group">
+					<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-bottom"></i></a>
+					<ul class="dropdown-menu">
+						<li class="dropdown-item"><a href="#">pokaż 5 na stronie</a></li>
+						<li class="dropdown-item"><a href="#">pokaż 10 na stronie</a></li>
+						<li class="dropdown-item"><a href="#">pokaż 25 na stronie</a></li>
+						<li class="dropdown-item"><a href="#">pokaż 50 na stronie</a></li>
+					</ul>
+					<a href="#" class="btn btn-border">pokaż wszystkie <i class="icon icon--arrow-right"></i></a>
+				</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footersite">
+        <div class="container">
+            <div class="footersite-data row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt=""></a>
+                    </div>
+                    <ul class="list list--icon list--white">
+                        <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
+                        <li class="list-item"><i class="icon icon--phone"></i>tel. (61) 85 50 112</li>
+                        <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="header">
+                        <h3 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h3>
+                    </div>
+                    <ul class="list-2-col">
+                        <li class="list-2-col-inner">
+                            <ul class="nav-bull">
+                                <li class="nav-bull-item"><a href="index.html">Strona główna</a></li>
+                                <li class="nav-bull-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
+                                <li class="nav-bull-item"><a href="#">Szkolenia zamknięte</a></li>
+                                <li class="nav-bull-item"><a href="#">Publikacje</a></li>
+                            </ul>
+                        </li>
+                        <li class="list-2-col-inner">
+                            <ul class="nav-bull">
+                                <li class="nav-bull-item"><a href="#">Regulamin</a></li>
+                                <li class="nav-bull-item"><a href="#">Polityka prywatności</a></li>
+                                <li class="nav-bull-item"><a href="about_us.html">O nas</a></li>
+                                <li class="nav-bull-item"><a href="contact.html">Kontakt</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="header">
+                        <h3 class="header-title header-title--section header-title--white"><span>Newsletter</span></h3>
+                    </div>
+                    <p>Niezawodna informacja na temat wydarzeń branżowych, nowych publikacji i aktualizacji serwisu.</p>
+                    <form class="form-inline form-newsletter form-newsletter--bottom">
+                        <div class="form-group form-group-submit">
+                            <input type="email" class="form-control" placeholder="Twój adres e-mail">
+                            <button type="submit" class="btn btn-submit">Wyślij</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="footersite-copyright row">
+                <div class="col">
+                    <p>Copyright &copy; 2009-2019 All Rights Reserved. Wszystkie prawa zastrzeżone.</p>
+                    <p>Explanator - szkolenia obejmujące zagadnienia prawne, finansowo-podatkowe i problemy zarządzania przedsiębiorstwami i instytucjami publicznymi.</p>
+                    <p>Ta strona jest chroniona przez reCAPTCHA i obowiązują na niej <a href="#">polityka prywatności</a> oraz <a href="#">warunki korzystania</a> z usługi firmy Google.</p>
+                </div>
+            </div>
+        </div>
+</footer>
+<script type="text/javascript" src="js/site.js"></script>
+<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
+<script type="text/javascript" src="vendor/icheck/icheck.min.js"></script>
+
 </body>
 </html>
