--- a/courses_register.html
+++ b/courses_register.html
@@ -1,10 +1,284 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" name="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Explanator - Szkolenia otwarte, szkolenia zamknięte i kursy on-line</title>
+    <meta name="keywords" name="" />
+    <meta name="description" name="" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/icheck/skins/square/red.css" />
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/modernizr-custom.js"></script>
 </head>
+
 <body>
-	
+
+<header class="headersite">
+    <section class="headersite-top">
+        <div class="container">
+            <div class="row">
+                <ul class="nav-help">
+                    <li class="nav-help-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
+                    <li class="nav-help-item"><i class="icon icon--phone"></i>tel. (61) 85 50 112</li>
+                    <li class="nav-help-item"><i class="icon icon--help"></i><a href="#">Pomoc</a></li>
+                    <li class="nav-help-item"><i class="icon icon--cart"></i><a href="#">Koszyk (0)</a></li>
+                    <li class="nav-help-item"><i class="icon icon--search"></i><a href="#">Szukaj</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="headersite-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col logo">
+                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt=""></a>
+                </div>
+                <menu class="col-lg-auto navbar">
+                    <ul class="navbar-inner">
+                        <li class="navbar-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
+                        <li class="navbar-item"><a href="#">Szkolenia zamknięte</a></li>
+                        <li class="navbar-item"><a href="#">Publikacje</a></li>
+                        <li class="navbar-item"><a href="about_us.html">O nas</a></li>
+                        <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
+                    </ul>
+                </menu>
+            </div>
+        </div>
+    </section>
+</header>
+
+<main role="main" class="contentbox contentbox--register">
+    <div class="container">
+        <div class="header center">
+            <h3 class="header-title header-title--name"><span>Formularz zgłoszeniowy</span></h3>
+        </div>
+    </div>
+    <div class="container contentbox-main-hld">
+        <div class="row">
+            <div class="col-lg-12 contentbox-header">
+                <p>Niniejszym zgłaszamy udział następujących osób w szkoleniu</p>
+                <div class="contentbox-title-hld">
+                    <h1 class="title">5. Forum Nowoczesnego Controllingu</h1>
+                    <h2 class="subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h2>
+                </div>
+                <div class="event-details">
+                    <p class="city"><i class="icon icon--calendar"></i> Warszawa, 24-25.10.2019</p>
+                    <p class="location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
+                </div>
+            </div>
+        </div>
+        <div class="row contentbox-main">
+            <div class="col-lg-12">
+                <form class="needs-validation">
+
+                        <h3 class="header-title header-title--content"><span>Uczestnicy szkolenia</span></h3>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Imię i nazwisko</label>
+                                <input type="text" class="form-control" placeholder="" value="">
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>Stanowisko</label>
+                                <input type="text" class="form-control" placeholder="" value="">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Tel</label>
+                                <input type="text" class="form-control" placeholder="" value="">
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>E-mail</label>
+                                <input type="text" class="form-control" placeholder="" value="">
+                            </div>
+                        </div>
+                        <h3 class="header-title header-title--content"><span>Dane do faktury</span></h3>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Nazwa firmy*</label>
+                                <input type="text" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>NIP*</label>
+                                <input type="text" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Ulica, nr domu/loka*</label>
+                                <input type="text" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>Kod pocztowy*</label>
+                                <input type="text" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Miasto*</label>
+                                <input type="text" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>Telefon*</label>
+                                <input type="text" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Fax</label>
+                                <input type="text" class="form-control">
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                        </div>
+                        <h3 class="header-title header-title--content"><span>Osoba kontaktowa</span></h3>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Imię i nazwisko*</label>
+                                <input type="text" class="form-control" placeholder="" value="" required>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>Stanowisko*</label>
+                                <input type="text" class="form-control" placeholder="" value="" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label>Tel*</label>
+                                <input type="text" class="form-control" placeholder="" value="" required>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label>E-mail*</label>
+                                <input type="text" class="form-control" placeholder="" value="" required>
+                            </div>
+                        </div>
+                        <h3 class="header-title header-title--content"><span>Uwagi lub adres korespondencyjny</span></h3>
+                        <div class="form-row">
+                            <div class="col-md-12 mb-3">
+                                <label>Jeżeli adres korespodencyjny jest odmienny od fakturowego proszę wpisać uwagi.</label>
+                                <textarea class="form-control" placeholder=""></textarea>
+                                <div class="invalid-feedback">
+                                    Pole jest wymagane.
+                                </div>
+                            </div>
+                        </div>
+                        <h3 class="header-title header-title--content"><span>Ceny i procedura płatności</span></h3>
+                        <p>Koszt uczestnictwa 1 osoby 1590 zł + VAT</p>
+                        <p>Po przesłaniu do organizatora niniejszego zgłoszenia otrzymają Państwo potwierdzenie przyjęcia zgłoszenia. Plan zajęć oraz faktura VAT, na podstawie której należy dokonać płatności przed szkoleniem, zostaną do Państwa przesłane 5 dni roboczych przed seminarium na wskazany adres e-mail. Niedokonanie wpłaty nie jest rezygnacją z uczestnictwa w szkoleniu.</p>
+                        <p><b>Rabaty</b></p>
+                        <ul>
+                            <li>5% przy zgłoszeniu do 2 i 3 osób</li>
+                            <li>10% przy zgłoszeniu powyżej 3 osób</li>
+                        </ul>
+                        <h3 class="header-title header-title--content"><span>Regulamin uczestnictwa</span></h3>
+                        <p>Rezygnacji z uczestnictwa dokonać można wyłącznie w formie pisemnej najpóźniej w terminie 7 dni roboczych przed terminem szkolenia. Niedotrzymanie powyższych warunków skutkuje obciążeniem zgłaszającego pełnymi kosztami udziału.</p>
+                        <p>Explanator zastrzega sobie możliwość odwołania lub zmiany terminu szkolenia. Explanator zastrzega sobie prawo do zmiany trenera z powodu zdarzeń losowych - w takim przypadku organizator zapewnia zastępstwo innej osoby o takich samych kwalifikacjach lub wyższych. Zmiana może nastąpić na co najmniej 3 dni przed planowanym terminem. W przypadku odwołania szkolenia Explanator dokona zwrotu wpłaconych kosztów uczestnictwa w terminie 5 dni roboczych.</p>
+                        <div class="custom-control custom-checkbox mb-3">
+                            <input type="checkbox" class="custom-control-input" required>
+                            <label class="custom-control-label">Akceptuje <a href="#">regulamin sprzedaży</a> oraz potwierdzam zaznajomienie się z <a href="#">Polityką Prywatności</a>.</label>
+                            <div class="invalid-feedback">Pole jest wymagane.</div>
+                        </div>
+                        <div class="custom-control custom-checkbox mb-3">
+                            <input type="checkbox" class="custom-control-input" required>
+                            <label class="custom-control-label">
+                                <p><b>Tak, chcę być informowany o kolejnych edycjach, wydarzeniach branżowych, specjalnych ofertach i nowych produktach</b>, dlatego zgadzam się na kontakt drogą mailową lub z wykorzystaniem telekomunikacyjnych urządzeń końcowych.</p>
+                                <p>Wyrażenie zgody jest dobrowolne. Administratorem danych osobowych jest firma Explanator – Iwona Dehina, z siedzibą przy ul. Kościelnej 30 lok. 59, Poznań 60-538, NIP: 778-115-70-12. Dane osobowe przetwarzane będą w celu realizacji zamówienia oraz dostarczania informacji o produktach zgodnie z Polityką Prywatności. Mają Państwo prawo dostępu do swoich danych, ich poprawiania oraz cofnięcia zgody w dowolnym momencie poprzez kontakt: <a href="mailto:marketing@explanator.pl">marketing@explanator.pl</a>.</p>
+                            </label>
+                            <div class="invalid-feedback">Pole jest wymagane.</div>
+                        </div>
+                        <p>* Pola oznaczone gwiazdką są wymagane.</p>
+                        <input type="submit" class="btn btn-primary btn-submit pull-right" value="Wyślij zgłoszenie">
+                </form>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="footersite">
+        <div class="container">
+            <div class="footersite-data row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt=""></a>
+                    </div>
+                    <ul class="list list--icon list--white">
+                        <li class="list-item"><i class="icon icon--email"></i><a href="mailto:biuro@explanator.pl">biuro@explanator.pl</a></li>
+                        <li class="list-item"><i class="icon icon--phone"></i>tel. (61) 85 50 112</li>
+                        <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="header">
+                        <h3 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h3>
+                    </div>
+                    <ul class="list-2-col">
+                        <li class="list-2-col-inner">
+                            <ul class="nav-bull">
+                                <li class="nav-bull-item"><a href="index.html">Strona główna</a></li>
+                                <li class="nav-bull-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
+                                <li class="nav-bull-item"><a href="#">Szkolenia zamknięte</a></li>
+                                <li class="nav-bull-item"><a href="#">Publikacje</a></li>
+                            </ul>
+                        </li>
+                        <li class="list-2-col-inner">
+                            <ul class="nav-bull">
+                                <li class="nav-bull-item"><a href="#">Regulamin</a></li>
+                                <li class="nav-bull-item"><a href="#">Polityka prywatności</a></li>
+                                <li class="nav-bull-item"><a href="about_us.html">O nas</a></li>
+                                <li class="nav-bull-item"><a href="contact.html">Kontakt</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="header">
+                        <h3 class="header-title header-title--section header-title--white"><span>Newsletter</span></h3>
+                    </div>
+                    <p>Niezawodna informacja na temat wydarzeń branżowych, nowych publikacji i aktualizacji serwisu.</p>
+                    <form class="form-inline form-newsletter form-newsletter--bottom">
+                        <div class="form-group form-group-submit">
+                            <input type="email" class="form-control" placeholder="Twój adres e-mail">
+                            <button type="submit" class="btn btn-submit">Wyślij</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="footersite-copyright row">
+                <div class="col">
+                    <p>Copyright &copy; 2009-2019 All Rights Reserved. Wszystkie prawa zastrzeżone.</p>
+                    <p>Explanator - szkolenia obejmujące zagadnienia prawne, finansowo-podatkowe i problemy zarządzania przedsiębiorstwami i instytucjami publicznymi.</p>
+                    <p>Ta strona jest chroniona przez reCAPTCHA i obowiązują na niej <a href="#">polityka prywatności</a> oraz <a href="#">warunki korzystania</a> z usługi firmy Google.</p>
+                </div>
+            </div>
+        </div>
+</footer>
+<script type="text/javascript" src="js/site.js"></script>
+<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
+<script type="text/javascript" src="vendor/icheck/icheck.min.js"></script>
+
 </body>
 </html>
