homepage - slider, change size photo

--- a/index.html
+++ b/index.html
@@ -53,16 +53,28 @@
 </header>
 
 <secion class="promotional">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="promotional-slider col-8">
+            <div class="promotional-slider col-7">
                 <ul class="js-slick-items slick-slider promotional-slider-inner">
                     <li class="item">
-                        <div class="item-image">
-                            <img src="http://via.placeholder.com/300x300/ffcffc/000000?text=1" />
-                        </div>
                         <a href="#">
-                            <div class="item-data">
+                            <div class="item-image">
+                                <img src="http://via.placeholder.com/1200x900/333/000000?text=1 - 1200x900" />
+                            </div>
+                            <div class="col-8 item-data">
+                                <h2 class="item-title">5. Forum Nowoczesnego Controllinguy</h2>
+                                <p class="item-time">Warszawa, 24-25.10.2019</p>
+                                <p class="item-text">Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <div class="item-image">
+                                <img src="http://via.placeholder.com/1200x900/DDD/000000?text=2 - 1200x900" />
+                            </div>
+                            <div class="col-8 item-data">
                                 <h2 class="item-title">Storytelling jako skuteczne narzędzie sprzedażowe</h2>
                                 <p class="item-time">Poznań, 27.09.2019</p>
                                 <p class="item-text">Pracujesz w sprzedaży? Jeśli tak, to z pewnością chcesz bić sprzedażowe rekordy, a także przewidywać, a nawet wyprzedzać oczekiwania klientów obecnych i przyszłych.</p>
@@ -70,14 +82,14 @@
                         </a>
                     </li>
                     <li class="item">
-                        <div class="item-image">
-                            <img src="http://via.placeholder.com/300x300/ffcffc/000000?text=1" />
-                        </div>
                         <a href="#">
-                            <div class="item-data">
-                                <h2 class="item-title">Storytelling jako skuteczne narzędzie sprzedażowe</h2>
-                                <p class="item-time">Poznań, 27.09.2019</p>
-                                <p class="item-text">Pracujesz w sprzedaży? Jeśli tak, to z pewnością chcesz bić sprzedażowe rekordy, a także przewidywać, a nawet wyprzedzać oczekiwania klientów obecnych i przyszłych.</p>
+                            <div class="item-image">
+                                <img src="http://via.placeholder.com/1200x900/ccc/000000?text=3 - 1200x900" />
+                            </div>
+                            <div class="col-8 item-data">
+                                <h2 class="item-title">6. Forum Szefów Sprzedaży</h2>
+                                <p class="item-time">Warszawa, 21-22.11.2019</p>
+                                <p class="item-text">Praca menedżera sprzedaży to codzienna walka na wielu frontach. Bez dobrego przygotowania sztabowego trudno jednak liczyć na spektakularne efekty. Dokładny wywiad, umożliwiający rozpoznanie sytuacji oraz uważna lektura raportów z pola bitwy o klienta są niezbędne do opracowania zwycięskiej strategii i taktyki. Bez lojalności i oddania podległych jednostek oraz udanych sojuszy z sieciami dystrybucyjnymi sprzedażowy plan ataku nie ma jednak szans powodzenia.</p>
                             </div>
                         </a>
                     </li>
@@ -99,12 +111,14 @@
                     });
                 });
             </script>
-            <div class="promotional-text col-4">
-                <div class="header">
-                    <h3 class="header-title header-title--promotional"><span><a href="#">Szkolenia zamknięte</a></span></h3>
+            <div class="promotional-text col-5">
+                <div class="col-6">
+                    <div class="header">
+                        <h3 class="header-title header-title--promotional"><span><a href="#">Szkolenia zamknięte</a></span></h3>
+                    </div>
+                    <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
+                    <a href="#" class="btn btn-primary pull-right">Zobacz więcej</a>
                 </div>
-                <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
-                <a href="#" class="btn btn-primary pull-right">Zobacz więcej</a>
             </div>
         </div>
     </div>
@@ -119,7 +133,7 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -144,7 +158,7 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
-                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -202,7 +216,7 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -221,7 +235,7 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
-                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -240,7 +254,7 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
@@ -259,7 +273,7 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
-                    <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+                    <img src="https://via.placeholder.com/285x380/ddd/000.png" />
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
